--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <div id="root">
         <h1>it is replaced by provided element content in script</h1> 
     </div>
-    <script type="module" src="./src/Food.js"></script>
+    <script type="module" src="/src/Food.js?v=1"></script>
 </body>
 </html>
